@@ -1,3 +1,7 @@
+=== master
+
+* Typecast column values when searching (jeremyevans)
+
 === 1.6.0 (2017-05-04)
 
 * Fix mtm code when using model classes with different primary key names (jeremyevans)
